--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -61,12 +61,13 @@
     <script src="js/webrtc/webrtc.module.js"></script>
     <script src="js/webrtc/webrtc.config.js"></script>
     <script src="js/webrtc/webrtc.service.js"></script>
-    <script src="js/webrtc/filters/dataurl.filter.js"></script>
     <script src="js/webrtc/plataform/plataform.service.js"></script>
     <script src="js/webrtc/adapter/adapter.service.js"></script>
     <script src="js/webrtc/dependencies/dependencies.constant.js"></script>
     <script src="js/webrtc/dependencies/dependencies.service.js"></script>
     <script src="js/webrtc/devices/devices.service.js"></script>
+    <script src="js/webrtc/device/device.service.js"></script>
+    <script src="js/webrtc/record/record.service.js"></script>
 
     <script src="js/core/nw/nw.module.js"></script>
     <script src="js/core/nw/nw.service.js"></script>
