Nuevo servicio records con conexion al servidor

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -41,7 +41,8 @@
     <script src="js/features/features.module.js"></script>
     <script src="js/features/features.component.js"></script>
     <script src="js/media-record/media-record.module.js"></script>
-    <script src="js/media-record/media-record.component.js"></script>
+    <!--<script src="js/media-record/media-record.component.js"></script>-->
+    <script src="js/media-record/new.media-record.component.js"></script>
     <script src="js/mirroring/mirroring.module.js"></script>
     <script src="js/mirroring/mirroring.component.js"></script>
     <script src="js/video-call/video-call.module.js"></script>
@@ -65,7 +66,8 @@
     <script src="js/webrtc/dependencies/dependencies.service.js"></script>
     <script src="js/webrtc/devices/devices.service.js"></script>
     <script src="js/webrtc/device/device.service.js"></script>
-    <script src="js/webrtc/record/record.service.js"></script>
+    <!--<script src="js/webrtc/record/record.service.js"></script>-->
+    <script src="js/webrtc/record/new.record.service.js"></script>
 
     <script src="js/core/nw/nw.module.js"></script>
     <script src="js/core/nw/nw.service.js"></script>
