--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="js/gui/panel/panel.style.css">
     <link rel="stylesheet" type="text/css" href="js/features/features.style.css">
     <link rel="stylesheet" type="text/css" href="js/media-record/media-record.style.css">
+    <link rel="stylesheet" type="text/css" href="js/video-call/video-call.style.css">
 </head>
 
 <body ng-controller="mainController as main">
@@ -34,6 +35,7 @@
     <script src="libs/angular-animate/angular-animate.js"></script>
     <script src="libs/angular-ui-clock/angular-clock.js"></script>
     <script src="libs/lumx/dist/lumx.js"></script>
+    <script src="libs/janus-gateway/html/janus.js"></script>
 
     <!--Libs Scripts-->
     <script src="libs/angular-ui-clock/dist/angular-clock.min.js"></script>
@@ -52,8 +54,6 @@
     <script src="js/gui/menu/menu-item/menuItem.component.js"></script>
     <script src="js/gui/controls/controls.module.js"></script>
     <script src="js/gui/controls/controls.component.js"></script>
-    <script src="js/gui/panel/panel.module.js"></script>
-    <script src="js/gui/panel/panel.component.js"></script>
     <script src="js/gui/gui.module.js"></script>
     
     <script src="js/webrtc/webrtc.module.js"></script>
@@ -66,6 +66,8 @@
     <script src="js/webrtc/devices/devices.service.js"></script>
     <script src="js/webrtc/device/device.service.js"></script>
     <script src="js/webrtc/record/record.service.js"></script>
+    <script src="js/webrtc/janus/janus.constant.js"></script>
+    <script src="js/webrtc/janus/janus.service.js"></script>
 
     <script src="js/core/nw/nw.module.js"></script>
     <script src="js/core/nw/nw.service.js"></script>
