--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,7 +16,6 @@
     <link rel="stylesheet" type="text/css" href="js/media-record/media-record.style.css">
     <link rel="stylesheet" type="text/css" href="js/video-call/video-call.style.css">
 </head>
-
 <body ng-controller="mainController as main">
     <div id="wrapper">
         <header flex-container="column" ng-include src="'partials/header.html'"></header>
@@ -56,6 +55,7 @@
     <script src="js/gui/controls/controls.component.js"></script>
     <script src="js/gui/gui.module.js"></script>
     
+
     <script src="js/webrtc/webrtc.module.js"></script>
     <script src="js/webrtc/webrtc.config.js"></script>
     <script src="js/webrtc/webrtc.service.js"></script>
@@ -67,7 +67,8 @@
     <script src="js/webrtc/device/device.service.js"></script>
     <script src="js/webrtc/record/record.service.js"></script>
     <script src="js/webrtc/janus/janus.constant.js"></script>
-    <script src="js/webrtc/janus/janus.service.js"></script>
+    <!--<script src="js/webrtc/janus/janus.service.js"></script>-->
+
 
     <script src="js/core/nw/nw.module.js"></script>
     <script src="js/core/nw/nw.service.js"></script>
@@ -81,5 +82,4 @@
     <script src="js/app.controller.js"></script>
     <script src="js/app.config.js"></script>
 </body>
-
 </html>
