--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="js/features/features.style.css">
     <link rel="stylesheet" type="text/css" href="js/media-record/media-record.style.css">
     <link rel="stylesheet" type="text/css" href="js/video-call/video-call.style.css">
+    <link rel="stylesheet" type="text/css" href="js/video-call-record/video-call-record.style.css">
 </head>
 <body ng-controller="mainController as main">
     <div id="wrapper">
@@ -48,6 +49,8 @@
     <script src="js/mirroring/mirroring.component.js"></script>
     <script src="js/video-call/video-call.module.js"></script>
     <script src="js/video-call/video-call.component.js"></script>
+    <script src="js/video-call-record/video-call-record.module.js"></script>
+    <script src="js/video-call-record/video-call-record.component.js"></script>
     <script src="js/gui/menu/menu.module.js"></script>
     <script src="js/gui/menu/menu.constant.js"></script>
     <script src="js/gui/menu/menu.component.js"></script>
